<package format="3">
  <name>patrolling_sim_ros2</name>
  <version>2.2.4</version>
  <description>Multi-robot patrolling package ported to ROS2. Configured to be run in simulation.</description>
  <author email="davidbsp@ingeniarius.pt">David Portugal</author>
  <maintainer email="joao.castilho@isr.uc.pt">João Castilho</maintainer>
  <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--<buildtool_depend>rosidl_default_generators</buildtool_depend>-->

  <build_depend>rclcpp_action</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stage_ros2</exec_depend>
  <exec_depend>p3dx_description_ros</exec_depend>
  <exec_depend>fake_localization_ros2</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
    <!--<cpp cflags="-I${prefix}/srv/cpp"/>-->
  </export>
</package>
